--- a/acerca de.html
+++ b/acerca de.html
@@ -16,6 +16,8 @@
     <meta name="keywords" content="acerca" />
     <title>Acerca de Ray Ban</title>
     <link href="css/dosColumnas.css" rel="stylesheet" />
+    <link href="css/reglas.css" rel="stylesheet" />
+    
 </head>
 
 <body>
