--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
    <title>Ray Ban</title>
    <meta charset="utf-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1" />
+   <link href="css/aboutCSS.css" rel="stylesheet" />
    <!--
    <link href="ct_base.css" rel="stylesheet" type="text/css" />
    <link href="ct_layout1.css" rel="stylesheet" type="text/css" />
