Imaganes con css

--- a/acerca de.html
+++ b/acerca de.html
@@ -24,11 +24,11 @@
 
     <header>
         <div id="cabecera">
-            <a id="cebecera" href=index.html><img src="images/logo.png" alt="Ray ban" />
+            <a id="cebecera" href=index.html><img class="pequeña" src="images/logo.png" alt="Ray ban" />
         </div>
         <nav id="menu">
             <ul>
-                <li><a href="acerca de.html">Acerca de Rayban</a></li>
+                <li><a href="acerca de.html">Acerca de Ray Ban</a></li>
                 <li><a href="gafas de sol.html">Gafas de Sol</a></li>
                 <li><a href="gafas de ver.html">Gafas de Ver</a></li>
                 <li><a href="tendencias.html">Tendencias 2019</a></li>
@@ -91,17 +91,17 @@
         </Section>
         <section>
 
-            <img src="images/acerca1.jpg"  alt="" />
-            <img src="images/acerca2.jpg" alt="" />
-            <img src="images/acerca3.jpg" alt="" />
-            <img src="images/acerca4.jpg" alt="" />
+            <img class="mediana" src="images/acerca1.jpg"  alt="" />
+            <img class="mediana" src="images/acerca2.jpg" alt="" />
+            <img class="mediana" src="images/acerca3.jpg" alt="" />
+            <img class="mediana" src="images/acerca4.jpg" alt="" />
         </section>
         <section>
             <aside>
                 <h2>Siguenos en nuestras redes social de:</h2>
-                <h3>Facebook</h3><img src="images/facebook.jpg" alt="" /></a>
-                <h3>Twitter</h3><img src="images/twitter.jpg"  alt="" /></a>
-                <h3>YouTube</h3><img src="images/youtube.jpg"  alt="" /></a>
+                <h3>Facebook</h3><img class="icono" src="images/facebook.jpg" alt="" /></a>
+                <h3>Twitter</h3><img class="icono" src="images/twitter.jpg"  alt="" /></a>
+                <h3>YouTube</h3><img class="icono" src="images/youtube.jpg"  alt="" /></a>
             </aside>
         </section>
     </div>
