--- a/gafas de sol.html
+++ b/gafas de sol.html
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div id="cabecera">
-            <a href=index.html><img src="images/logo.png" width="200" height="200" alt="Ray ban" />
+            <a href=index.html><img class="pequeña" src="images/logo.png" alt="Ray ban" />
         </div>
 
         <nav id="menu">
@@ -52,9 +52,9 @@
             <p>En esta sección, ampliaremos la informacion sobre los diferentes tipos de gafas para el sol para cada
                 persona.</br>
 
-                <h2>Niñ@s</h2></br><img src="images/nino.jpg" alt="" /> </br>
-                <h2>Hombres</h2></br><img src="images/hombres.jpg" alt="" /> </br>
-                <h2>Mujeres</h2></br><img src="images/mujeres.jpg" alt="" /> </br>
+                <h2>Niñ@s</h2></br><img class="mediana" src="images/nino.jpg"  alt="" /> </br>
+                <h2>Hombres</h2></br><img class="mediana" src="images/hombres.jpg" alt="" /> </br>
+                <h2>Mujeres</h2></br><img class="mediana" src="images/mujeres.jpg" alt="" /> </br>
             </p>
 
 
@@ -62,9 +62,9 @@
         <section>
             <aside id="contenidoSecundario">
                 <h2>Siguenos en nuestras redes social de:</h2>
-                <h3>Facebook</h3><img src="images/facebook.jpg" width="30" height="30" alt="" /></a>
-                <h3>Twitter</h3><img src="images/twitter.jpg" width="30" height="30" alt="" /></a>
-                <h3>YouTube</h3><img src="images/youtube.jpg" width="30" height="30" alt="" /></a>
+                <h3>Facebook</h3><img class="icono" src="images/facebook.jpg" width="30" height="30" alt="" /></a>
+                <h3>Twitter</h3><img class="icono" src="images/twitter.jpg" width="30" height="30" alt="" /></a>
+                <h3>YouTube</h3><img class="icono" src="images/youtube.jpg" width="30" height="30" alt="" /></a>
             </aside>
         </section>
     </div>
