--- a/acerca de.html
+++ b/acerca de.html
@@ -34,6 +34,7 @@
                 <li><a href="tendencias.html">Tendencias 2019</a></li>
                 <li><a href="accesorio.html">Accesorios</a></li>
                 <li><a href="tiendas.html">Localizador de Tiendas</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -98,7 +99,7 @@
         </section>
         <section>
             <aside>
-                <h2>Siguenos en nuestras redes social de:</h2>
+                <h2>Siguenos en nuestras redes sociales de:</h2>
                 <h3>Facebook</h3><img class="icono" src="images/facebook.jpg" alt="" /></a>
                 <h3>Twitter</h3><img class="icono" src="images/twitter.jpg"  alt="" /></a>
                 <h3>YouTube</h3><img class="icono" src="images/youtube.jpg"  alt="" /></a>
