--- a/gafas de sol.html
+++ b/gafas de sol.html
@@ -32,6 +32,7 @@
                 <li><a href="tendencias.html">Tendencias 2019</a></li>
                 <li><a href="accesorio.html">Accesorios</a></li>
                 <li><a href="tiendas.html">Localizador de Tiendas</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
