--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             alt="Accesorios" /></a>
       <h1>Locallizador de Tiendas</h1><a href="tiendas.html"><img src="images/tiendas.jpg" width="930" height="445"
             alt="Localizador de Tiendas" /></a>
+      <h1>Contacto</h1><a href="contacto.html"><img src="images/contacto.jpg" width="930" height="445"
+            alt="contacto" /></a>
    </nav>
    <section>
       <aside>
