--- a/acerca de.html
+++ b/acerca de.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 
-
 <head>
     <!--
 		New Perspectives on HTML5 and CSS3, 7th Edition Tutorial 1
@@ -17,7 +16,6 @@
     <title>Acerca de Ray Ban</title>
     <link href="css/dosColumnas.css" rel="stylesheet" />
     <link href="css/reglas.css" rel="stylesheet" />
-    
 </head>
 
 <body>
@@ -55,26 +53,21 @@
                 </p>
 
                 <p><strong>Ray Ban</strong> es el resultado de lo que en aquel momento era para lo que habían nacido.
-                    Ray
-                    ban que se traduce “barrera contra los rayos del sol”. Desde ese momento, la marca Ray Ban pasó a
-                    ser
-                    parte del
-                    vestuario oficial del cuerpo aéreo de los Estados Unidos, pero fue solo en 1937 cuando se autorizó
-                    la
-                    venta al público bajo el nombre de Aviator.</p>
+                    Ray Ban que se traduce “barrera contra los rayos del sol”. Desde ese momento, la marca Ray Ban pasó
+                    a
+                    ser parte del vestuario oficial del cuerpo aéreo de los Estados Unidos, pero fue solo en 1937 cuando
+                    se autorizó
+                    la venta al público bajo el nombre de Aviator.</p>
 
                 <p>Hablando un poco más sobre marketing. <strong>Ray Ban</strong> ha sido todo un ejemplo para el
-                    desarrollo
-                    de la estrategia de brand placement. En 1983, en el mercado, se encontraban las gafas Wayfarer que
-                    hasta
-                    antes
-                    de la estrategia, se habían vendido 18.000 unidades. La marca decidió pautar en la película Risky
-                    Business, donde el actor Tom Cruise usaba su producto en varias escenas. Después de aquel suceso las
-                    ventas
-                    subieron hasta llegar al punto de vender 360.000 unidades; 6 años más tarde esta cifra ya había
-                    crecido
-                    a 4 millones a
-                    nivel
+                    desarrollo de la estrategia de brand placement. En 1983, en el mercado, se encontraban las gafas
+                    Wayfarer que
+                    hastaantes de la estrategia, se habían vendido 18.000 unidades. La marca decidió pautar en la
+                    película Risky Business, donde el actor Tom Cruise usaba su producto en varias escenas. Después de
+                    aquel suceso las
+                    ventas subieron hasta llegar al punto de vender 360.000 unidades; 6 años más tarde esta cifra ya
+                    había
+                    crecido a 4 millones a nivel
                     mundial.</p>
 
                 <p><strong>Ray Ban</strong> es un claro ejemplo de cómo de una necesidad, con marketing, se puede
@@ -92,7 +85,7 @@
         </Section>
         <section>
 
-            <img class="mediana" src="images/acerca1.jpg"  alt="" />
+            <img class="mediana" src="images/acerca1.jpg" alt="" />
             <img class="mediana" src="images/acerca2.jpg" alt="" />
             <img class="mediana" src="images/acerca3.jpg" alt="" />
             <img class="mediana" src="images/acerca4.jpg" alt="" />
@@ -101,8 +94,8 @@
             <aside>
                 <h2>Siguenos en nuestras redes sociales de:</h2>
                 <h3>Facebook</h3><img class="icono" src="images/facebook.jpg" alt="" /></a>
-                <h3>Twitter</h3><img class="icono" src="images/twitter.jpg"  alt="" /></a>
-                <h3>YouTube</h3><img class="icono" src="images/youtube.jpg"  alt="" /></a>
+                <h3>Twitter</h3><img class="icono" src="images/twitter.jpg" alt="" /></a>
+                <h3>YouTube</h3><img class="icono" src="images/youtube.jpg" alt="" /></a>
             </aside>
         </section>
     </div>
